--- a/ProjectEcommerce.MVC/Views/Home/Index.cshtml
+++ b/ProjectEcommerce.MVC/Views/Home/Index.cshtml
@@ -5,4 +5,17 @@
 <div class="text-center">
     <h1 class="display-4">Welcome</h1>
     <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">Amazon Project!</a>.</p>
+    <div class="row justify-content-center">
+        <div class="card" style="width: auto">
+            <div class="card-body">
+                <h4 class="card-title text-center">Let´s do some shopping!</h4>
+                <h6 class="card-subtitle  text-center mb-2 text-muted">We are happy that you visited our website!</h6>
+                <p class="card-text">If you want to shop you need to be registreted or do login.Or you can send us an e-mail.</p>
+                <p class="text-center">
+                    <a class="card-link" asp-controller="Utenti" asp-action="Register">Registration</a>
+                    <a class="card-link" asp-controller="Utenti" asp-action="Email">E-mail</a>
+                </p>
+            </div>
+        </div>
+    </div>
 </div>
