--- a/ProjectEcommerce.MVC/Views/Home/Index.cshtml
+++ b/ProjectEcommerce.MVC/Views/Home/Index.cshtml
@@ -13,7 +13,7 @@
                 <p class="card-text">If you want to shop you need to be registreted or do login.Or you can send us an e-mail.</p>
                 <p class="text-center">
                     <a class="card-link" asp-controller="Utenti" asp-action="Register">Registration</a>
-                    <a class="card-link" asp-controller="Utenti" asp-action="Email">E-mail</a>
+                    <a class="card-link" href="mailto:pippo@mail.it" />E-mail
                 </p>
             </div>
         </div>
